refactor: restructure automators and add websocket improvements
- Reorganize assistant extractors into src/lib/services/automators/
- Add stream-observer utility for monitoring AI assistant responses
- Introduce automator types and registry system
- Add Claude, ChatGPT, Gemini, and Grok automators
- Rename assistants.ts to automators.ts for clarity
- Update background and content scripts for new architecture
- Add selector utilities for DOM interaction
- Create experimental tmp/src-next/ for architecture exploration
- Add testing strategy and Warp configuration documentation
- Update VSCode extensions and dependencies

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@tsconfig/svelte": "^5.0.5",
+    "@types/micromatch": "^4.0.10",
     "@wxt-dev/module-svelte": "^2.0.3",
     "svelte": "^5.38.6",
     "svelte-check": "^4.3.1",
@@ -24,6 +25,7 @@
     "wxt": "^0.20.6"
   },
   "dependencies": {
-    "jszip": "^3.10.1"
+    "jszip": "^3.10.1",
+    "micromatch": "^4.0.8"
   }
 }
