--- a/package.json
+++ b/package.json
@@ -16,17 +16,18 @@
   },
   "devDependencies": {
     "@tsconfig/svelte": "^5.0.5",
-    "@types/micromatch": "^4.0.10",
+    "@types/picomatch": "^4.0.2",
     "@wxt-dev/module-svelte": "^2.0.3",
     "svelte": "^5.38.6",
     "svelte-check": "^4.3.1",
     "tslib": "^2.8.1",
     "typescript": "^5.9.2",
+    "vitest": "^4.0.7",
     "ws": "^8.18.3",
     "wxt": "^0.20.6"
   },
   "dependencies": {
     "jszip": "^3.10.1",
-    "micromatch": "^4.0.8"
+    "picomatch": "^4.0.3"
   }
 }
